# Sqrtalk

./: CMakeLists.txt  README.md  build.sh  config.json  main.cpp
web/: index.html
